salesforce-main/src/main/default/objects/Account/fields/Care_Experience_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Care_Experience_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This fields records which BPP user verified the Care Experience Status, either verbally, by email or through assessment for financial support. HESA require that BPP must have reason above and beyond the information given on the student&apos;s application form to identify them as Care Leaver</description>
    <inlineHelpText>This fields records which BPP user verified the Care Experience Status, either verbally, by email or through assessment for financial support. HESA require that BPP must have reason above and beyond the information given on the student&apos;s application form to identify them as Care Leaver</inlineHelpText>
    <label>Care Experience Verified By?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>