salesforce-main/src/main/default/objects/Account/fields/Cash_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Cash_on_Hand__c</fullName>
    <label>Cash on Hand</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>