salesforce-main/src/main/default/objects/Account/fields/Charge_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Charge_Trigger__c</fullName>
    <description>Instructs the booking engine to either create the charge for an instance on the Start Date or the End Date of that instance. The charge will then be processed by an Invoice Scheduler.</description>
    <inlineHelpText>For customers that are invoiced in arrears, this defines the moment when the customer is charged for a course. As soon as the charge is created, it will be processed during the next eligible invoice run (defined by frequency and cycle start).</inlineHelpText>
    <label>Charge Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billing_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instance Start Date</fullName>
                <default>true</default>
                <label>Instance Start Date</label>
            </value>
            <value>
                <fullName>Booking Confirmed Date</fullName>
            </value>
            <value>
                <fullName>Instance End Date</fullName>
                <isActive>false</isActive>
                <label>Instance End Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>