salesforce-main/src/main/default/objects/Account/fields/Client_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Category__c</fullName>
    <description>Displays what type of client the company currently is</description>
    <label>Client Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Client</fullName>
            </value>
            <value>
                <fullName>Transactional Client</fullName>
            </value>
            <value>
                <fullName>APAC Key Client</fullName>
            </value>
            <value>
                <fullName>APAC Client</fullName>
            </value>
            <value>
                <fullName>LM Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>