salesforce-main/src/main/default/objects/Account/fields/Contract_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry__c</fullName>
    <label>Contract Expiry</label>
    <type>Date</type>
</CustomField>