salesforce-main/src/main/default/objects/Account/fields/Copy_of_Email__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Email__c</fullName>
    <description>Field was created to have a copy of the person email field on the account to be able use as a recipient in a workflow email alert.</description>
    <label>Copy of Email</label>
    <type>Email</type>
</CustomField>