salesforce-main/src/main/default/objects/Account/fields/Correspondence_Detail__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Detail__c</fullName>
    <label>Correspondence Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>