salesforce-main/src/main/default/objects/Account/fields/Country_of_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Permanent_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Countries List</description>
    <label>Country of Permanent Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>country_list__c.Valid_Domicile__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select the country with valid domicile true</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Accounts (Country of Permanent Address)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>