salesforce-main/src/main/default/objects/Account/fields/Criminal_conviction_details__c.field-meta.xml
<CustomField>
    <fullName>Criminal_conviction_details__c</fullName>
    <label>Criminal conviction details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>