salesforce-main/src/main/default/objects/Account/fields/Currently_in_UK_with_a_Visa__c.field-meta.xml
<CustomField>
    <fullName>Currently_in_UK_with_a_Visa__c</fullName>
    <label>Applying in the UK</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>