salesforce-main/src/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Tier 1 - Key Clients</fullName>
            </value>
            <value>
                <fullName>Tier 2 - Large Clients</fullName>
            </value>
            <value>
                <fullName>Tier 3 - Normal</fullName>
            </value>
            <value>
                <fullName>Direct Debit Students</fullName>
            </value>
            <value>
                <fullName>Export (LM only)</fullName>
            </value>
            <value>
                <fullName>Book Shop/colleges (LM Only)</fullName>
            </value>
            <value>
                <fullName>Legal - Once account has been pass over to out solicitors for collection</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Collection Agent</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>