salesforce-main/src/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Client</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
            <value>
                <fullName>PD Special Account Managers</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>