salesforce-main/src/main/default/objects/Account/fields/Data_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Change_Status__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Data Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Changed</fullName>
            </value>
            <value>
                <fullName>Change Approved</fullName>
            </value>
            <value>
                <fullName>Change Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>