salesforce-main/src/main/default/objects/Account/fields/Date_of_Birth_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Text__c</fullName>
    <label>Date of Birth (Text)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>