salesforce-main/src/main/default/objects/Account/fields/Date_of_flight_departure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_flight_departure__c</fullName>
    <description>Data to be able to capture against a student account by an agent, enrolment officer or engagement officer</description>
    <label>Date of flight departure</label>
    <type>Date</type>
</CustomField>