salesforce-main/src/main/default/objects/Account/fields/Debt__c.field-meta.xml
<CustomField>
    <fullName>Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if student is in debt</description>
    <inlineHelpText>Check box if student is in debt</inlineHelpText>
    <label>Debt</label>
    <type>Checkbox</type>
</CustomField>