salesforce-main/src/main/default/objects/Account/fields/Dedicated_inbox__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_inbox__c</fullName>
    <description>Legacy Migration</description>
    <label>Dedicated inbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>