salesforce-main/src/main/default/objects/Account/fields/Dedicated_Phone__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Phone__c</fullName>
    <description>Legacy Migration</description>
    <label>Dedicated Phone</label>
    <type>Phone</type>
</CustomField>