salesforce-main/src/main/default/objects/Account/fields/Deliver_Materials_to_Student__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Materials_to_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets default order value for business accounts to specify if applicable materials will be delivered to the company or to the students on associated bookings.</description>
    <inlineHelpText>Specifies if applicable materials will be delivered to this account or to the students on associated bookings. If checked send to student&apos;s default delivery address, unchecked use Order delivery address.This preference can be changed on each order</inlineHelpText>
    <label>Deliver Materials to Student</label>
    <type>Checkbox</type>
</CustomField>