salesforce-main/src/main/default/objects/Account/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>