salesforce-main/src/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>