salesforce-main/src/main/default/objects/Account/fields/DUNS_Reference__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Reference__c</fullName>
    <label>DUNS Reference</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>