salesforce-main/src/main/default/objects/Account/fields/Education_Budget__c.field-meta.xml
<CustomField>
    <fullName>Education_Budget__c</fullName>
    <description>Calculation based on Employees &amp; Industry average wage</description>
    <formula>(NumberOfEmployees *
CASE(Industry_Type__c,
&apos;Accountancy&apos;, 38400,
&apos;Other Financial Services&apos;, 41100,
&apos;Healthcare (Non-NHS)&apos;, 37700,
&apos;NHS&apos;, 37700,
&apos;Law&apos;, 46200,
&apos;Manufacturing&apos;, 34700,
&apos;Public Sector&apos;, 31500,
&apos;Retail&apos;, 30400,
&apos;Technology&apos;, 41000,
37000))
*0.005</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Education Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>