salesforce-main/src/main/default/objects/Account/fields/EEA_citizen__c.field-meta.xml
<CustomField>
    <fullName>EEA_citizen__c</fullName>
    <label>Are you a citizen of the EEA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>