salesforce-main/src/main/default/objects/Account/fields/eng_exam_type_other__c.field-meta.xml
<CustomField>
    <fullName>eng_exam_type_other__c</fullName>
    <label>Eng Exam Type Other</label>
    <type>TextArea</type>
</CustomField>