salesforce-main/src/main/default/objects/Account/fields/English_Lang_Test_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>English_Lang_Test_Expected_Date__c</fullName>
    <label>English Lang Test Expected Date</label>
    <type>Date</type>
</CustomField>