salesforce-main/src/main/default/objects/Account/fields/English_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>English_Test_Date__c</fullName>
    <description>The processes will work better with the enhanced CAS issuing process with this date field.</description>
    <label>English Test Date</label>
    <type>Date</type>
</CustomField>