salesforce-main/src/main/default/objects/Account/fields/English_Test_Request__c.field-meta.xml
<CustomField>
    <fullName>English_Test_Request__c</fullName>
    <label>English Test Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full ELT</fullName>
            </value>
            <value>
                <fullName>BTC ELT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>