salesforce-main/src/main/default/objects/Account/fields/EORI_Number__c.field-meta.xml
<CustomField>
    <fullName>EORI_Number__c</fullName>
    <description>EORI Number for European companies, required for international shipping</description>
    <label>EORI Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>