salesforce-main/src/main/default/objects/Account/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 White</fullName>
            </value>
            <value>
                <fullName>14 Irish Traveller</fullName>
            </value>
            <value>
                <fullName>21 Black or Black British-Caribbean</fullName>
            </value>
            <value>
                <fullName>22 Black or Black British-African</fullName>
            </value>
            <value>
                <fullName>29 Other Black background</fullName>
            </value>
            <value>
                <fullName>31 Asian or Asian British-Indian</fullName>
            </value>
            <value>
                <fullName>32 Asian or Asian British-Pakistani</fullName>
            </value>
            <value>
                <fullName>33 Asian or Asian British-Bangladeshi</fullName>
            </value>
            <value>
                <fullName>34 Chinese</fullName>
            </value>
            <value>
                <fullName>39 Other Asian background</fullName>
            </value>
            <value>
                <fullName>41 Mixed-White and Black Caribbean</fullName>
            </value>
            <value>
                <fullName>42 Mixed-White and Black African</fullName>
            </value>
            <value>
                <fullName>43 Mixed-White and Asian</fullName>
            </value>
            <value>
                <fullName>49 Other mixed background</fullName>
            </value>
            <value>
                <fullName>80 Other ethnic background</fullName>
            </value>
            <value>
                <fullName>98 I do not wish to declare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>