salesforce-main/src/main/default/objects/Account/fields/EU_Tax_registered__c.field-meta.xml
<CustomField>
    <fullName>EU_Tax_registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EU Tax registered</label>
    <type>Checkbox</type>
</CustomField>