salesforce-main/src/main/default/objects/Account/fields/Ever_Studied_in_UK_Before__c.field-meta.xml
<CustomField>
    <fullName>Ever_Studied_in_UK_Before__c</fullName>
    <label>Ever Studied in UK Before</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>