salesforce-main/src/main/default/objects/Account/fields/Exam_Result__c.field-meta.xml
<CustomField>
    <fullName>Exam_Result__c</fullName>
    <label>Exam Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>