salesforce-main/src/main/default/objects/Account/fields/Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Reason__c</fullName>
    <label>Exempt Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>