salesforce-main/src/main/default/objects/Account/fields/Expected_Tender_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Tender_Date__c</fullName>
    <label>Expected Tender Date</label>
    <type>Date</type>
</CustomField>