salesforce-main/src/main/default/objects/Account/fields/Flight_number__c.field-meta.xml
<CustomField>
    <fullName>Flight_number__c</fullName>
    <description>Data to be able to capture against a student account by an agent, enrolment officer or engagement officer</description>
    <label>Flight number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>