salesforce-main/src/main/default/objects/Account/fields/Formatted_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Mobile_Number__c</fullName>
    <description>This is the field referenced by SMS Magic App for sending and receiving SMS.</description>
    <label>Formatted Mobile Number</label>
    <type>Phone</type>
</CustomField>