salesforce-main/src/main/default/objects/Account/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <length>80</length>
    <type>Text</type>
</CustomField>