salesforce-main/src/main/default/objects/Account/fields/Further_Education_Date__c.field-meta.xml
<CustomField>
    <fullName>Further_Education_Date__c</fullName>
    <description>Expected or completed date of A-level qualifications.</description>
    <inlineHelpText>Expected or completed date of A-level qualifications.</inlineHelpText>
    <label>Further Education Date</label>
    <type>Date</type>
</CustomField>