salesforce-main/src/main/default/objects/Account/fields/GDPR_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GDPR Opt In field in line with GDPR compliance. Linked to Marketing Cloud and student preference centre. Used as initial data point for passive opt in/outs (Marketing Cloud, Direct Apps etc.) &amp; triggers workflow marketing preference actions</description>
    <inlineHelpText>Account field</inlineHelpText>
    <label>GDPR Opt In</label>
    <type>Checkbox</type>
</CustomField>