salesforce-main/src/main/default/objects/Account/fields/Has_been_paid_a_care_leavers_bursary__c.field-meta.xml
<CustomField>
    <fullName>Has_been_paid_a_care_leavers_bursary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Given as part of the Apprentice application event - indicates whether applicant has received a care leavers bursary before.</description>
    <label>Has been paid a care leavers bursary</label>
    <type>Checkbox</type>
</CustomField>