salesforce-main/src/main/default/objects/Account/fields/Has_been_paid_a_care_leavers_bursary_QA__c.field-meta.xml
<CustomField>
    <fullName>Has_been_paid_a_care_leavers_bursary_QA__c</fullName>
    <formula>&quot;I confirm that I have been paid a care leavers bursary before and am not eligible for this payment again:&quot; +
BR() + BR() +
IF(
  Has_been_paid_a_care_leavers_bursary__c = true,
  &apos;Yes&apos;,
  &apos;No&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has been paid a care leavers bursary</label>
    <type>Text</type>
</CustomField>