salesforce-main/src/main/default/objects/Account/fields/Has_Learning_Needs__c.field-meta.xml
<CustomField>
    <fullName>Has_Learning_Needs__c</fullName>
    <description>The picklist indicates whether the individual has specific learning needs.</description>
    <label>Has Learning Needs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>