salesforce-main/src/main/default/objects/Account/fields/Head_Office_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Address_2__c</fullName>
    <label>Head Office Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>