salesforce-main/src/main/default/objects/Account/fields/Head_Office_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Address_3__c</fullName>
    <label>Head Office Address 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>