salesforce-main/src/main/default/objects/Account/fields/Head_Office_Country_List__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Country_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Office Country</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>