salesforce-main/src/main/default/objects/Account/fields/Head_Office_County__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_County__c</fullName>
    <label>Head Office County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>