salesforce-main/src/main/default/objects/Account/fields/Head_Office_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Postal_Code__c</fullName>
    <label>Head Office Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>