salesforce-main/src/main/default/objects/Account/fields/HESA_Student_ID_SID__c.field-meta.xml
<CustomField>
    <fullName>HESA_Student_ID_SID__c</fullName>
    <inlineHelpText>This field records HESA&apos;s unique identifier for the Student and is generated using the initial Course Start Year, UKPRN and Account Number</inlineHelpText>
    <label>HESA Student ID (SID)</label>
    <length>17</length>
    <type>Text</type>
</CustomField>