salesforce-main/src/main/default/objects/Account/fields/High_Level_Needs__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Needs__c</fullName>
    <label>High Level needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>