salesforce-main/src/main/default/objects/Account/fields/Higher_Education_Completed__c.field-meta.xml
<CustomField>
    <fullName>Higher_Education_Completed__c</fullName>
    <description>Expected or completed date of undergraduate education.</description>
    <inlineHelpText>Expected or completed date of undergraduate education.</inlineHelpText>
    <label>Higher Education Completed</label>
    <type>Date</type>
</CustomField>