salesforce-main/src/main/default/objects/Account/fields/HUB_Student__c.field-meta.xml
<CustomField>
    <fullName>HUB_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HUB Student</label>
    <type>Checkbox</type>
</CustomField>