salesforce-main/src/main/default/objects/Account/fields/ID_Document_Reference__c.field-meta.xml
<CustomField>
    <fullName>ID_Document_Reference__c</fullName>
    <description>Reference string for an Identification document - part of Apprentice Onboarding process.</description>
    <externalId>true</externalId>
    <label>ID Document Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>