salesforce-main/src/main/default/objects/Account/fields/ID_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Document_Type__c</fullName>
    <description>The type of ID that is provided as part of an Application</description>
    <label>ID Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driving license</fullName>
            </value>
            <value>
                <fullName>Identity card</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>