salesforce-main/src/main/default/objects/Account/fields/In_receipt_of_EHCP__c.field-meta.xml
<CustomField>
    <fullName>In_receipt_of_EHCP__c</fullName>
    <label>In receipt of EHCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>