salesforce-main/src/main/default/objects/Account/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountancy</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Booksales</fullName>
            </value>
            <value>
                <fullName>Bookshop</fullName>
            </value>
            <value>
                <fullName>BPP Employees</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy Company</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Healthcare (Non-NHS)</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>LM Corporate</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>NHS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Financial Services</fullName>
            </value>
            <value>
                <fullName>Professional Body</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>BPP Centre</fullName>
                <isActive>false</isActive>
                <label>BPP Centre</label>
            </value>
            <value>
                <fullName>Chemical</fullName>
                <isActive>false</isActive>
                <label>Chemical</label>
            </value>
            <value>
                <fullName>Healthcare</fullName>
                <isActive>false</isActive>
                <label>Healthcare</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>